Fixed overflow

--- a/css/css(dump).css
+++ b/css/css(dump).css
@@ -1,164 +1,3 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-
-html, body {
-	height: 100%;
-	width: 100%;
-	background-color: #000;
-}
-
-.page-wrapper {
-	min-height: 100%;
-}
-
-@font-face {
-	font-family: 'OSF';
-	src: url(../assets/fonts/OuterspaceMilitia.ttf);
-	font-style: normal;
-	font-weight: 100;
-}
-
-@font-face {
-	font-family: 'CUR';
-	src: url(../assets/fonts/AllertaStencil-Regular.ttf);
-	font-style: normal;
-	font-weight: 100;
-}
-
-@keyframes textAnim {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 0.7;
-	}
-}
-
-
-@keyframes colorChange {
-	0%, 100% {
-		opacity: 0;
-	}
-	50% {
-		opacity: 1;
-	}
-}
-
-/* SECTION-1 */
-
-.first-section {
-	position: relative;
-	height: 100vh;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	
-	padding-bottom: 100px;
-}
-
-.first-section .filter1 {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: #fd0495c7;
-	animation: colorChange 10s ease-in-out infinite;
-	animation-fill-mode: both;
-	mix-blend-mode: overlay;
-}
-
-/* video{
-	max-width: 1500px;
-	max-height: 1500px;
-} */
-
-.image-container {
-	position: absolute;
-	background-image: url(../assets/images/newbanner-resized.jpg);
-	background-size: cover;
-	width: 1800px;
-	height: 100vh;
-	overflow: hidden;
-	position: fixed;
-}
-
-.content-1 h1 {
-	font-family: OSF;
-	font-weight: 600;
-	font-size: 4em;
-	color: cornsilk;
-	line-height: 1.5;
-	word-spacing: -0.5em;
-	
-	text-align: center;
-	opacity: 0.7;
-	animation: textAnim 8s 1;
-}
-
-@media (max-width: 600px) {
-	.content-1 h1 {
-		position: relative;
-		font-size: 2em;
-	}
-}
-
-/* SECTION-2 */
-
-.second-section { 
-	background-color: #000;
-	background-image: url(../assets/images/spaceship.jpg);
-	background-size: cover;
-	background-attachment: fixed; 
-	height: 90vh;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding-bottom: 500px;
-	position: relative;
-	z-index: 2;
-}
-
-.second-section .filter2 {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: #fd3d3d94;
-	animation: colorChange 10s ease-in-out infinite;
-	animation-fill-mode: both;
-	mix-blend-mode: overlay;
-}
-
-.box {
-	position: relative;
-	top: 90px;
-	width: 65vw;
-	height: 60vh;
-	box-sizing: border-box;
-	overflow: hidden;
-	background: rgba(0, 0, 0, 0.521);
-	border-radius: 12px;
-	opacity: 0;
-}
-
-.box .content {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 19px;
-	font-weight: lighter;
-	opacity: 1;
-	color: rgb(255, 255, 255);
-	padding: 40px;
-	
-}
-
-/* FOOTER */
-
 .footer {
 	background-color: #3D3B3B;
 	
@@ -178,12 +17,12 @@ html, body {
 
 .footer .footer-contents {
 	/* border: 1px solid red; */
-	display: grid;
+	display: flex;
 	grid-template-columns: 1fr 1fr 1fr;
 	column-gap: 50px;
 	height: 38vh;
 	position: relative;
-
+	justify-content: space-around;
 	
 }
 
